--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 /* HEADER */
+
+
 .row  {
   display: flex;
   flex-direction: row;
 }
 /* MAIN */
 main  {
-  width: 75%;
-  background-color: rgb(245, 174, 32);
+  width: 100%;
+  background-color: #fbb710;
   display: flex;
   flex-direction: row;
+  
 }
