actualizacion de entrega final

--- a/src/Componentes/Producto/Producto.css
+++ b/src/Componentes/Producto/Producto.css
@@ -29,6 +29,10 @@ strong  {
     padding-top: 12px;
 }
 
+.detail-shop    {
+    display: none;
+}
+
 @media (max-width: 720px)   {
     .Producto {
         flex: 100%;
