--- a/src/Componentes/populares/popularProd.css
+++ b/src/Componentes/populares/popularProd.css
@@ -25,3 +25,31 @@ img {
         flex: 75%;
     }
 }
+
+.column {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .column img {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  
+  .column img:hover::before {
+    content: attr(alt);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  .column img:hover {
+    opacity: 0.5;
+  }
+  
